# testdocs

./: .copier-answers.yml  .gitignore  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml
dev/: 404.html  index.html  objects.inv
dev/API/: index.html
dev/search/: search_index.json
docs/: API.md  index.md
src/testdocs/: __init__.py
